compiler-core/main/__core/type_/snapshots/gleam_core____core__type___tests__pipe_with_annonymous_unannotated_functions_wrong_arity2.snap
---
source: compiler-core/src_refactored/__core/type_/tests.rs
assertion_line: 3094
expression: "\npub fn main() {\n  let a = 1\n     |> fn (x) { #(x, x + 1) }\n     |> fn (x) { x.0 }\n     |> fn (x, y) { x }\n}\n"
snapshot_kind: text
---
----- SOURCE CODE

pub fn main() {
  let a = 1
     |> fn (x) { #(x, x + 1) }
     |> fn (x) { x.0 }
     |> fn (x, y) { x }
}


----- ERROR
error: Incorrect arity
  ┌─ /src/one/two.gleam:6:9
  │
6 │      |> fn (x, y) { x }
  │         ^^^^^^^^^^^^^^^ Expected 2 arguments, got 1
